feat: update pres info and confirm that the pres has been received
